<resources>
    <string name="app_name"></string>
    <string name="title_text">Google Sign-In\nQuickstart</string>

    <!-- Sign-in status messages -->
    <string name="signed_in_fmt">Signed in as: %s</string>
    <string name="signed_in">Signed in</string>
    <string name="signing_in">Signing in…</string>
    <string name="signed_out">Signed out</string>
    <string name="signed_in_err">"Error: please check logs."</string>
    <string name="error_null_person">
        Error: Plus.PeopleApi.getCurrentPerson returned null. Ensure that the Google+ API is
        enabled for your project, you have a properly configured google-services.json file
        and that your device has an internet connection.
    </string>
    <string name="loading">Loading…</string>
    <string name="auth_code_fmt">Auth Code: %s</string>
    <string name="id_token_fmt">ID Token: %s</string>

    <!-- Google Play Services error for Toast -->
    <string name="play_services_error_fmt">Google Play Services Error: %i</string>

    <!-- Button labels -->
    <string name="sign_out">Sign Out</string>
    <string name="disconnect">Disconnect</string>
    <string name="refresh_token">Get Fresh Token</string>

    <!-- Content Description for images -->
    <string name="desc_google_icon">Google Logo</string>

    <!-- Rationale for asking for Contacts -->
    <string name="contacts_permission_rationale">Contacts access is needed in order to retrieve your email address.</string>

    <!-- Activity Names and Descriptions -->
    <string name="name_sign_in_activity">SignInActivity</string>
    <string name="desc_sign_in_activity">Signing in, signing out, and revoking access.</string>
    <string name="desc_sign_in_activity_scopes">Signing in, signing out, and revoking access with Google Drive permissions.</string>

    <string name="name_id_token_activity">IdTokenActivity</string>
    <string name="desc_id_token_activity">Retrieving an ID Token for the user.</string>

    <string name="desc_auth_code_activity">Demonstrate retrieving an auth code for authorizing your server.</string>
    <string name="name_auth_code_activity">ServerAuthCodeActivity</string>

    <string name="desc_rest_activity">Demonstrate using Google Sign In with a Google REST API</string>
    <string name="name_rest_activity">RestApiActivity</string>

    <!-- Messages for the Rest API activity -->
    <string name="connections_fmt">Connections: %1$s</string>
    <string name="msg_contacts_failed">Get contacts failed.</string>

    <!-- TODO(user): replace with your real server client ID -->
    <!-- Server Client ID.  This should be a valid Web OAuth 2.0 Client ID obtained
         from https://console.developers.google.com/ -->
    <string name="server_client_id">48644440579-o6mirfj8dqvhgvdsa5r5rp0vn1q1kqv8.apps.googleusercontent.com</string>

    <string name="horizontal_timeline">Horizontal Timeline</string>
    <string name="vertical_timeline">Vertical Timeline</string>


    <string-array name="dept_array">
        <item>Apparel</item>
        <item>Beauty</item>
        <item>Electronics</item>
        <item>Grocery</item>
        <item>Home Improvement</item>
        <item>Jewelry</item>
        <item>Pharmacy</item>
    </string-array>
    <string name="settings">Settings</string>
    <string name="article_detail_more_info">More Info</string>
    <string name="article_detail_exam">Examen</string>
    <string name="article_detail_control">Control</string>
    <string name="article_detail_tp">Tp</string>
    <string name="article_detail_intero">Interrogation</string>
    <string name="NoteManager">Gestion des Notes et des Abesences</string>
    <string name="AbsentManager">Gestion des Absences</string>
    <string name="RdvManager">Gestion des Rendez-vous</string>
    <string name="TimetableManager">Gestion d\'emploi du temps</string>
    <string name="accountName">%1$s: %2$s.</string>
    <string name="settings_file">account</string>
    <string name="settings_account_id">account_id</string>
    <string name="settings_account_username">account_username</string>
    <string name="settings_account_access_token">access_token</string>
    <string name="msg_loading">Please wait&#8230;</string>
    <string name="msg_loading_2">Loading. Please wait&#8230;</string>
    <string name="msg_network_error">Please check your Internet connection</string>
    <string name="msg_account_blocked">This account is blocked by a moderator.</string>
    <string name="msg_copied_to_clipboard">Copied to clipboard.</string>
    <string name="msg_enter_item">Please write something or attach photo.</string>
    <string name="msg_enter_msg">Please write something or attach photo.</string>
    <string name="msg_password_changed">Password successfully changed</string>
    <string name="msg_settings_saved">Settings successfully saved.</string>
    <string name="msg_ticket_send_success">Your request is accepted! You will receive a response to the email, which is indicated in the request.</string>
    <string name="msg_password_reset_link_sent">A message with link to reset your password has been sent to your email.</string>
    <string name="msg_no_such_user_in_bd">No such user in database</string>
    <string name="msg_connect_to_facebook_success">You have successfully linked application with your account on Facebook!</string>
    <string name="msg_connect_to_facebook_error">Your account on Facebook is already associated with another account.</string>
    <string name="msg_connect_to_facebook_removed">Connect with your Facebook account removed.</string>
    <string name="msg_comment_has_been_added">Comment has been added.</string>
    <string name="msg_comments_disabled">Comments are closed for this item.</string>
    <string name="msg_auth_prompt_like">To get started, sign in to your account or register.</string>
    <string name="msg_auth_prompt_comment">Make comments can only registered users.</string>
    <string name="text_input_title">Ajouter une Note :</string>

    <string-array name="snipperdialog">
        <item>exam</item>
        <item>controle</item>
        <item>intero</item>
        <item>tp</item>
    </string-array>

    <string name="rate_title">Rate the library!</string>
    <string name="rate_message">Your star won\'t change or influence anything (maybe will make me a bit happier).</string>

    <string name="edit_info">Modifier une informations :</string>
    <string name="text_input_message">Input must match \\\\w+ or dialog won\'t accept it. That is because TextFilter object is set.</string>
    <string name="text_input_error_message">I told you. Please type something correct.</string>

    <string name="connecting_to_server">Connecting to server</string>

    <string name="donate_title">Donate?</string>
    <string name="donate_message">Select an option please. This app isn\'t released yet, so no money will be charged.</string>

    <string name="order_food_title">Order some food!</string>

    <string name="info_title">LovelyDialogs</string>
    <string name="info_message">This library is a set of simple wrapper classes that are aimed to help you easily create fancy dialogs.</string>

    <string name="btn_standard_dialog">Standard dialog</string>
    <string name="btn_text_input_dialog">Text input dialog</string>
    <string name="btn_single_choice_dialog">Single choice dialog</string>
    <string name="btn_multi_choice_dialog">Multi choice dialog</string>
    <string name="btn_info_dialog">Info dialog</string>
    <string name="btn_progress_dialog">Progress dialog</string>
    <string name="you_ordered">You\'ve ordered:\n%s</string>
    <string name="confirm">Confirm</string>
    <string name="later">Later</string>
    <string name="repo_waiting">GitHub repo is waiting for your star!</string>
    <string name="you_donated">"You donated: %s!"</string>
    <string name="add_information">Add Information</string>
    <string name="id">ID : </string>
    <string name="nom">Nom : </string>
    <string name="une_date">Selectionnez une date : </string>
    <string name="annuler">Annuler</string>
    <string name="ok">Ok</string>

</resources>
