<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">



    <TextView
        android:id="@+id/nomdialog"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/nom"
        android:backgroundTint="@color/darkRed"
        android:layout_margin="@dimen/dialogDimen"
        android:textColor="@color/navigationBarColor"
        android:inputType="textPersonName" />

    <Spinner
        android:id="@+id/okdialog"
        android:layout_width="match_parent"
        android:layout_gravity="center"
        android:layout_margin="20dp"
        android:textColor="@color/navigationBarColor"
        android:layout_height="wrap_content">
        </Spinner>



    <EditText
        android:layout_width="362dp"
        android:layout_height="wrap_content"
        android:id="@+id/value"
        android:hint="Note"
        android:inputType="number"
        android:layout_margin="@dimen/dialogDimen"

        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginRight="50dp"
            android:layout_margin="@dimen/dialogDimen"
            android:layout_weight="1"
            android:padding="10dp"
            android:background="@color/darkRed"
            android:textColor="@color/white"
            android:text="@string/annuler" />

        <Button
            android:id="@+id/ok"
            android:layout_width="wrap_content"
            android:layout_gravity="start"
            android:layout_marginLeft="50dp"
            android:layout_margin="@dimen/dialogDimen"
            android:layout_height="wrap_content"
            android:background="@color/darkRed"
            android:layout_weight="1"
            android:textColor="@color/white"
            android:text="@string/ok" />

    </LinearLayout>

</LinearLayout>